logs/ajk-ios-buildtools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ajk_ios_buildTools-0.1.egg-info'...
Listing './lib/python3.5/site-packages/buildTools'...
Compiling './lib/python3.5/site-packages/buildTools/appManager.py'...
***   File "./lib/python3.5/site-packages/buildTools/appManager.py", line 20
    print "{} not in map_appname_path".format(appName)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/buildTools/dailyBuild.py'...
***   File "./lib/python3.5/site-packages/buildTools/dailyBuild.py", line 45
    print "Build failed"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/buildTools/profileManager.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (profileManager.py, line 20)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
